version 1.7.6, in progress
- Add menu item: Variable/Normality test
- Add $xlist accessor to get the list of regressors from the
  last model
- Removed some redundant preferences items
- Fix bugs 1996156, 1996161
- MLE fixes
- Function package help: ensure this is not truncated

6/13/2008 version 1.7.5
- max() and min() functions: extend the syntax to allow a list
  argument
- Reading CSV data: automatically substitute '_' for illegal
  characters in variable names
- Support DESTDIR for make install
- Add Weibull distribution to the various gretl probability
  distribution functions
- Fix for parsing a restriction with leading numerical term
- New functions: pdf, sdc, msortby
- User-defined functions: allow a descriptive string to
  accompany each parameter, for use in GUI
- Add $unit accessor to get a panel unit index
- Add "--breusch-pagan" option to lmtest command (with --robust
  option to use the Koenker robust variance estimator); also
  add this test to the GUI
- Fix some bugs in sub-sampling of panel datasets
- Revise the GUI for setting the sample range for panel data
- Improvements for panel time-series graphs
- Fix bug in importing data with long numeric observation 
  labels
- printf command: allow matrices in place of scalars (e.g.
  using "%f" or "%g" conversion)
- GUI script output window: add option of making output
  "sticky" (running a script appends to text)
- Add log-axis option to GUI graph editing dialog
- GUI program: add right-click popup menus to more windows
- Fix bugs 1929957, 1922915, 1951681, 1954428, 1954838,
  1960861, 1969680, 1972629, 1972613, 1980775
- Add guard against unmatched "if" in loops, functions and
  scripts
- Fix bug: VARs and equation systems not getting removed as
  "last model" on exit from user-defined functions, which
  could cause strange errors in complex scripts
- Fix for forecasts from equation systems displayed in the
  GUI program
- Updates to some screenshots in the User's Guide